[gd_scene load_steps=17 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/NPCs/TargetPracticeDummy.gd" type="Script" id=2]
[ext_resource path="res://scenes/_common/GUI/sfx/no.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/_common/GUI/sfx/oof.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/Items/collectables/2D/Magazine2DPickup.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/NPCs/fist of fury.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/FistL:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FistR:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/FistL:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 21.9557, -14.4917 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/FistL:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/FistR:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 21.9557, 19.3223 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite/FistR:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 113.16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.366204, 1.4011 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/BloodSpurtParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "punch"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/FistL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21.9557, -14.4917 ), Vector2( 35.1292, -24.1528 ), Vector2( 48.3026, -9.66113 ), Vector2( 21.9557, -14.4917 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/FistR:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21.9557, 19.3223 ), Vector2( 21.9557, 19.3223 ), Vector2( 35.1291, 24.1528 ), Vector2( 53.1445, 9.38971 ), Vector2( 21.9557, 19.3223 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/FistL:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FistR:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/FistL:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 35.5457, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/FistR:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -32.3755, 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "relax"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/FistR:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/FistL:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.369, 15.6994 )

[sub_resource type="CircleShape2D" id=6]
radius = 9.48202

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 59.2805, 65.2127 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 281.033, 289.834 )

[node name="TargetPracticeDummyNPC" type="KinematicBody2D"]
scale = Vector2( 0.227731, 0.207015 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.780392, 0.105882, 0.105882, 1 )
light_mask = 0
material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="BloodSpurtParticles" type="CPUParticles2D" parent="Sprite"]
emitting = false
lifetime = 3.0
one_shot = true
explosiveness = 0.7
randomness = 0.2
local_coords = false
direction = Vector2( 0, -1 )
spread = 60.0
initial_velocity = 80.0
scale_amount = 4.0
scale_amount_random = 0.5
color = Color( 0.827451, 0.0901961, 0.0901961, 1 )

[node name="FistL" type="Sprite" parent="Sprite"]
position = Vector2( 21.9557, -14.4917 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 6 )

[node name="FistR" type="Sprite" parent="Sprite"]
position = Vector2( 21.9557, 19.3223 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 6 )
flip_v = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -27.5
margin_top = -37.0
margin_right = 25.5
margin_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 27.5, 7 )
text = "Bad Guy"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/die = SubResource( 3 )
anims/hit = SubResource( 4 )
anims/punch = SubResource( 7 )
anims/relax = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.38419e-07, 6.03822 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="DieNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0

[node name="HitNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[node name="SpawnOnDeath" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "Magazine2DPickup" ), [ ExtResource( 5 ) ] ]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 150.0
max_neighbors = 20

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="damage_area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_area"]
scale = Vector2( -3.37249, 3.71667 )
shape = SubResource( 6 )

[node name="PunchingArea" type="Area2D" parent="."]
visible = false

[node name="MeleeThreatRange" type="CollisionShape2D" parent="PunchingArea"]
position = Vector2( -2.19558, 2.41529 )
shape = SubResource( 8 )

[node name="ShootingArea" type="Area2D" parent="."]
visible = false

[node name="ShootingRange" type="CollisionShape2D" parent="ShootingArea"]
position = Vector2( 0, 4.83057 )
shape = SubResource( 9 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]
[connection signal="body_entered" from="PunchingArea" to="." method="_on_PunchingArea_body_entered"]
[connection signal="body_exited" from="PunchingArea" to="." method="_on_PunchingArea_body_exited"]
